sass/_tables.scss
//
// Tables
// --------------------------------------------------

table {
  background-color: $table-bg;
}

caption {
  padding-top: $table-cell-padding;
  padding-bottom: $table-cell-padding;
  color: $text-muted;
  text-align: left;
}

th {
  text-align: left;
}

// Baseline styles

.table {
  width: 100%;
  max-width: 100%;
  // Cells
  > thead,
  > tbody,
  > tfoot {
    > tr {
      > th,
      > td {
        padding: 15px 8px;
        line-height: $line-height-base;
        vertical-align: top;
        border-top: 1px solid $table-border-color;
      }
    }
  }
  // Bottom align for column headings
  > thead > tr > th {
    vertical-align: bottom;
    border-bottom: 2px solid $table-border-color;
    font-weight: 300;
    color: #959BA2;
  }
  // Remove top border from thead by default
  > caption + thead,
  > colgroup + thead,
  > thead:first-child {
    > tr:first-child {
      > th,
      > td {
        border-top: 0;
      }
    }
  }
  // Account for multiple tbody instances
  > tbody + tbody {
    border-top: 2px solid $table-border-color;
  }

  // Nesting
  .table {
    background-color: $body-bg;
  }
}

// Condensed table w/ half padding

.table-condensed {
  > thead,
  > tbody,
  > tfoot {
    > tr {
      > th,
      > td {
        padding: $table-condensed-cell-padding;
      }
    }
  }
}

// Bordered version
//
// Add borders all around the table and between all the columns.

.table-bordered {
  border: 1px solid $table-border-color;
  > thead,
  > tbody,
  > tfoot {
    > tr {
      > th,
      > td {
        border: 1px solid $table-border-color;
      }
    }
  }
  > thead > tr {
    > th,
    > td {
      border-bottom-width: 2px;
    }
  }
}

// Hover effect
//
// Placed here since it has to come after the potential zebra striping

.table-hover {
  > tbody > tr:hover {
    background-color: $table-bg-hover;
  }
}

// Table cell sizing
//
// Reset default table behavior

table col[class*="col-"] {
  position: static; // Prevent border hiding in Firefox and IE9-11 (see https://github.com/twbs/bootstrap/issues/11623)
  float: none;
  display: table-column;
}

table {
  td,
  th {
    &[class*="col-"] {
      position: static; // Prevent border hiding in Firefox and IE9-11 (see https://github.com/twbs/bootstrap/issues/11623)
      float: none;
      display: table-cell;
    }
  }
}

// Table backgrounds
//
// Exact selectors below required to override `.table-striped` and prevent
// inheritance to nested tables.

// Generate the contextual variants
@include table-row-variant('active', $table-bg-active);
@include table-row-variant('success', $state-success-bg);
@include table-row-variant('info', $state-info-bg);
@include table-row-variant('warning', $state-warning-bg);
@include table-row-variant('danger', $state-danger-bg);

/************************************************************************
TABLE
************************************************************************/

table {

  // hiding fixed table header for now
  &.fixed {
    display: none;
  }
}

// All list views
.cn-list {
  padding: 0;

  table {
    &.empty.card {

      &, tbody {
        background-color: transparent;
        border-bottom: none;
      }

      tr {
        border: none;
        text-align: center;

        &:hover {
          background: transparent;
        }
      }

    }
  }

  .table {
    >thead,
    >tbody {
      >tr:not(.grouped-list) {
        >th,
        >td {
          padding: 15px;
        }
      }
    }
  }

  thead {
    tr {
      height: 55px;

      th {
        &:first-child {
          padding-left: 20px;
        }

        &:last-child {
          padding-right: 20px;
        }

        &.budget-column {
          width: 25%;
        }
      }
    }
  }

  tbody {
    & + tbody {
      border-top-width: 1px;
    }

    tr {
      &.no-items-to-show {
        .well {
          text-align: center;
          font-weight: 300;
        }
      }
    }

    td {
      border-width: 0 0 2px;
      border-color: $list-border;
      vertical-align: middle;

      cn-edit-in-place {

        input[type="text"],
        input[type="text"]:focus {
          border: none;
          box-shadow: none;
          width: 100%;
          background: transparent;
          font-weight: 800;
          padding: 0;
          outline: none;
          font-size: 15px;
        }
      }

      .modal-content & {
        vertical-align: top;
      }

      &:first-child {
        padding-left: 20px;
      }

      &:last-child {
        padding-right: 20px;
      }

      &.reduced-name-column {
        word-wrap: break-word;
        max-width: 205px;
      }
    }

    .grouped-list {
      .collapse {
        border-top: 1px solid $light-grey;
      }
      & > td {
        padding: 0;
        border: 0;

        &:first-child {
          padding-left: 0;
        }

        &:last-child {
          padding-right: 0;
        }
      }

      table {
        border: 0;
        border-left: 20px solid $lighter-grey;
        border-bottom: 1px solid $lighter-grey;
      }

      td {
        border-color: $lighter-grey;
      }
    }

    small {
      color: $list-text-help;
    }

    a.link {
      font-weight: 500;
    }
  }

  .disabled,
  .disabled:hover {
    &, &.selected {
      td,
      & .grouped-list td {
        background: $white;

        &, * {
          color: $mid-grey;
        }
      }
    }
  }

  .kpi-stat {
    span {
      display: block;
    }

    p {
      text-align: center;
    }
  }

  a.popover-preview {
    display: block;
    height: 100%;
  }

  .highlighted {
    color: $list-selected-bg;
  }

  &.fixed-header-table {
    // required for fixed-header/scrolling feature
    &:first-child {
      overflow: auto;
      -webkit-transform: translate3d(0, 0, 0);
    }
  }

  /*
   * Specific CSS Targeting Per List Type
   */

  // requests list
  &.requests-list-table {
    table {
      thead {
        th {
          &:nth-child(2) {
            min-width: 10px;
          }
          &:nth-child(3) {
            width: 25%;
          }
          &:nth-child(4) {
            width: 20%;
          }
          &:nth-child(5) {
            text-align: center;
          }
          &:nth-child(11) {
            min-width: 120px;
          }
        }
      }
      tbody {
        td {
          &:nth-child(5) {
            text-align: center;
            i {
              color: #638A79
            }
          }
          &:nth-child(7) {
            a {
              margin-top: 5px;
              display: table;
            }
          }

          .status {
            position: relative;
            padding-left: 20px;

            i {
              position: absolute;
              left: 0;
              top: 4px;
            }
            p {
              &:first-of-type {
                text-transform: capitalize;
              }
              &:nth-of-type(2) {
                opacity: 0.5;
              }
            }
            a {
              margin-top: 5px;
              display: table;
            }
          }

        }
      }
    }
  }

  // Ad Sets List
  table.ad-sets-list-table {
    &.card {
      border-bottom: none;
    }

    td.toggle-collapse {
      width: 45px;
    }
    .grouped-list {
      border: none;

      td.toggle-collapse {
        width: 0;
        padding: 12px;
      }
    }
    td.ad-set-name {
      width: 120px;
    }
    td.toggle-status {
      width: 72px;
    }
    td.delivery-status {
      width: 140px;
    }
    td.kpi-stat {
      width: 180px;
    }
    td.campaign-name {
      width: 300px;
    }
    td.date {
      width: 87px;
    }
    td.spend-breakdown {
      width: 150px;
    }
    td.edit-btn {
      width: 66px;
    }
  }

  .label {
    display: inline;
  }

  .media-object {
    max-width: 50px;
    display: inline;
  }
}

.list-container {
  max-width: 85%;
  margin: auto;
  margin-top: 25px;
}

// Timepicker is table-based
.cn-timepicker {
  td {
    min-width: 50px;
  }
  button {
    margin: 0px 2px;
    padding: 9px;
  }
}

.table > tbody > tr > td,
.table > tbody > tr > th,
.table > tfoot > tr > td,
.table > tfoot > tr > th,
.table > thead > tr > td,
.table > thead > tr > th {
  vertical-align: middle;
}

.top-heavy > tbody > tr > td,
.top-heavy > tbody > tr > th,
.top-heavy > tfoot > tr > td,
.top-heavy > tfoot > tr > th,
.top-heavy > thead > tr > td,
.top-heavy > thead > tr > th {
  vertical-align: top;
}

.cn-ff-table {
  .row {
    &:first-of-type {
      border-top: none;
      p.column-header {
        color: #97949A;
        font-size: 0.90em;
        font-weight: 200;
      }
    }
    p:first-of-type {
      font-weight: 800;
      margin-bottom: 0;
    }
    border-top: 1px solid #d8d8d8;
    margin-left: 0;
    margin-right: 0;
    div:first-child {
      padding-left: 0;
    }
  }
}

